--- a/wrapper.yml
+++ b/wrapper.yml
@@ -1,6 +1,6 @@
 ---
 - name: Call hello world ansible roles
-  hosts: localhost
+  hosts: all
   tasks:
     - name: Execute ansible role
       include_role:
